fix: nowrap for footer menu

--- a/styles/content/footer.css
+++ b/styles/content/footer.css
@@ -21,6 +21,7 @@
   align-items: center;
   list-style: none;
   text-transform: lowercase;
+  text-wrap: nowrap;
 }
 
 .footer__link-active {
